--- a/homestyle.css
+++ b/homestyle.css
@@ -1,10 +1,15 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .div3 {
     margin: 0;
     padding: 10px;
     display:flex;
     width: 100%;
     justify-content: space-between;
-    box-shadow: 0 0 10px black;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.712);
     
   }
   
