--- a/homestyle.css
+++ b/homestyle.css
@@ -3,17 +3,18 @@
   padding: 0;
 }
 .header{
+  background-color: rgb(225, 224, 237);
   display:flex;
   justify-content: space-between;
   border-bottom: 1px;
-  box-shadow: 0 4px 2px -2px rgba(0,0,0,0.2);
+  box-shadow: 0 7px 3px -1px rgba(0,0,0,0.2);
 }
 .header h1{
-  width:100%;
+  width:50%;
   margin-top: 8px;
 }
 div.header h1 a img{
-  width:16%;
+  width:30%;
 }
 
 a.button{
@@ -23,9 +24,30 @@ a.button{
   padding: 10px 20px;
   font-size: 16px;
   cursor:pointer;
+  border-radius: 10px;
   text-decoration: none;
   margin: 16px;
 }
 h1{
   margin-top: 6%;
+}
+.title{
+  font-size:60px;
+  color:#000000;
+  text-shadow: 2px 2px 5px rgb(42, 41, 41);
+}
+body{
+  background-image: url('./backgroundhome.jpg') ;
+  background-size: cover;
+}
+input[type=text] {
+  float: right;
+  padding: 6px;
+  border: none;
+  border-radius: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  width: 40%;
+  font-size: 17px;
 }
