--- a/homestyle.css
+++ b/homestyle.css
@@ -1,53 +1,70 @@
-*{
+/* Global Reset */
+* {
   margin: 0;
   padding: 0;
 }
-.header{
+
+/* Font Declaration 
+@font-face {
+  font-family: 'Lobster-Regular';
+  src: url('./lobster/Lobster-Regular.ttf')
+}*/
+
+
+/* Header Styles */
+.header {
   background-color: rgb(225, 224, 237);
-  display:flex;
+  display: flex;
   justify-content: space-between;
-  border-bottom: 1px;
-  box-shadow: 0 7px 3px -1px rgba(0,0,0,0.2);
-}
-.header h1{
-  width:50%;
-  margin-top: 8px;
-}
-div.header h1 a img{
-  width:30%;
+  border-bottom: 1px solid #ccc;
+  /* Corrected border-bottom to include color */
+  box-shadow: 0 7px 3px -1px rgba(0, 0, 0, 0.2);
 }
 
-a.button{
+.header h1 {
+  width: 50%;
+  margin-top: 8px;
+}
+
+.header h1 a img {
+  width: 30%;
+}
+
+/* Button Styles */
+a.button {
   background-color: black;
   color: white;
   border: none;
   padding: 10px 20px;
   font-size: 16px;
-  cursor:pointer;
+  cursor: pointer;
   border-radius: 10px;
   text-decoration: none;
   margin: 16px;
 }
-h1{
-  margin-top: 6%;
+
+/* Title Styles */
+.title {
+  margin-top: 10px;
+  font-size: 60px;
+  color: #000000;
+  font-family: sans-serif;
 }
-.title{
-  font-size:60px;
-  color:#000000;
-  text-shadow: 2px 2px 5px rgb(42, 41, 41);
-}
-body{
-  background-image: url('./backgroundhome.jpg') ;
+
+/* Body Styles */
+body {
+  background-image: url('./backgroundhome.jpg');
   background-size: cover;
 }
+
+/* Input Styles */
 input[type=text] {
   float: right;
   padding: 6px;
-  border: none;
+  border: 1px solid #ccc;
   border-radius: 10px;
   margin-top: 15px;
   margin-bottom: 15px;
-  border: 1px solid #ccc;
   width: 40%;
   font-size: 17px;
 }
