--- a/homestyle.css
+++ b/homestyle.css
@@ -45,10 +45,12 @@ a.button {
 
 /* Title Styles */
 .title {
-  margin-top: 10px;
+  margin-top: 100px;
   font-size: 60px;
-  color: #000000;
+  color: #ffffff;
   font-family: sans-serif;
+  text-align:right;
+  margin-right: 100px;
 }
 
 /* Body Styles */
