--- a/style-register.css
+++ b/style-register.css
@@ -1,10 +1,11 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('./backgroundhome.jpg');
+    background-image: url('./loginimage3.jpg');
     background-size: cover;
   }
   
   form {
+    height: fit-content;
     width: 40%;
     margin: 40px auto;
     background-color: #fefefe;
@@ -52,5 +53,9 @@ body {
   
   option[value="select an option"] {
     display: none;
+  }
+  form img{
+    text-align: center;
+     
   }
   
