--- a/style.css
+++ b/style.css
@@ -6,25 +6,21 @@
 body{
      font-size: medium;
      height: 100vh;
-    background-image: url('./backgroundhome.jpg');
+    background-image: url('./loginimage3.jpg');
     background-size: cover;
 }
 button{
     border-radius:5px ;
-    background-color: rgb(252, 252, 252);
-    color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     border: none;
     padding: 10px;
     width: 50%;
-    box-shadow:0 0 10px black;
+    box-shadow:0 0 5px black;
     cursor: pointer;
 }
-button[type="submit"]:hover {
-    background-color: #0a0a0a;
-    color:white;
-  }
 form {
-    height: 50%;
+    height: 60%;
     padding: 10px 80px;
     border-radius: 10px;
     border: 3px solid rgb(0, 0, 0);
