--- a/style-jobprovider.css
+++ b/style-jobprovider.css
@@ -1,40 +1,51 @@
 
 body {
+    align-items: center;
     font-family: Arial, sans-serif;
     margin: 20px;
-    background-color: #f4f4f4;
+    background-image: url("./loginimage3.jpg");
+    background-size: cover;
 }
 
 h3 {
     color: #333;
+    font-size: 30px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 form {
-    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color:rgba(255, 255, 255, 0.5);
     padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
+    width:50%;
+    border: 1px solid #0b0b0b;
+    border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+   margin: 40px auto;
 }
 
 label {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom:10px;
+   font-size: 20px;
 }
 
 input[type="text"],
 input[type="number"] {
-    width: 100%;
-    height: 40px;
+    width: 60%;
+    height: 30px;
     margin-bottom: 20px;
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    border: 1px solid #313131;
+    border-radius: 10px;
 }
 
 button[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #070707;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -43,7 +54,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #3e8e41;
+    background-color: #272927;
 }
 
 input[type="text"]:focus,
