--- a/style-jobprovider.css
+++ b/style-jobprovider.css
@@ -8,7 +8,7 @@ body {
 }
 
 h3 {
-    color: #333;
+    color: #000000;
     font-size: 30px;
     margin-bottom: 10px;
     text-align: center;
@@ -19,9 +19,9 @@ form {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color:rgba(255, 255, 255, 0.5);
-    padding: 20px;
-    width:50%;
+    background-color:rgb(255, 255, 255);
+    padding: 10px;
+    width:40%;
     border: 1px solid #0b0b0b;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -36,12 +36,12 @@ label {
 
 input[type="text"],
 input[type="number"] {
-    width: 60%;
-    height: 30px;
-    margin-bottom: 20px;
+    width: 70%;
+    height: 15px;
+    margin-bottom: 10px;
     padding: 10px;
     border: 1px solid #313131;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 button[type="submit"] {
