--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*
 *{
     margin: 0;
     padding: 0;
@@ -64,5 +65,64 @@ a {
 }
 p{
     font-size: 5;
+}*/
+
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
 }
+
+form {
+  width: 30%;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #000000;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  text-align: center;
+  color: #000000;
+}
+
+input[type="email"],
+input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #000000;
+  border-radius: 5px;
+}
+
+button[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  background-color: #000000;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #252525;
+}
+
+p {
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
+  color: #4CAF50;
+}
+
+a:hover {
+  color: #3e8e41;
+}
+
+
   
