--- a/style-register.css
+++ b/style-register.css
@@ -8,7 +8,7 @@ body {
     height: fit-content;
     width: 40%;
     margin: 40px auto;
-    background-color: #fefefe;
+    background-color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,7 +25,7 @@ body {
     width: 60%;
     padding: 10px;
     margin: 10px 0;
-    border: 1px solid #ccc;
+    border: 1px solid #000000;
     border-radius: 5px;
   }
   
