--- a/style.css
+++ b/style.css
@@ -71,9 +71,9 @@ p{
 body {
   font-family: Arial, sans-serif;
   background-color: #ffffff;
-  background-image: url("./loginimage3.jpg");
+ /* background-image: url("./loginimage3.jpg");
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: fixed;*/
   
 }
 
