--- a/style-dashboard.css
+++ b/style-dashboard.css
@@ -1,26 +1,3 @@
-/*.header{
-  display: flex;
-  background-color: azure;
-  justify-content: space-between;
-}
-.logo {
-
-}
-.profile{
-  display: flex;
-  justify-content: end;
-}
-.profile a img{
-   width: 15%;
-  
-}*/
-
-
-
-
-/* style-dashboard.css */
-
-/* Global Styles */
 
 * {
   box-sizing: border-box;
@@ -29,8 +6,12 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
-  background-color:  white;
+  background-color: white;
+  /*background-image: url("./250952-P4L7QF-829.jpg");
+  background-size: 800px 800px; 
+  background-repeat: no-repeat;
+  background-position:right;*/
+  
 }
 
 /* Header Styles */
@@ -43,6 +24,7 @@ body {
   color: #fff;
   padding: 10px 20px;
   border-bottom: 1px solid #cccccc;
+  box-shadow:  0 7px 3px -1px rgba(0, 0, 0, 0.2);
 }
 
 /* Logo Styles */
