--- a/style-jobposting.css
+++ b/style-jobposting.css
@@ -59,3 +59,21 @@ textarea{
   border-radius: 5px;
   margin:10px 80px;
 }
+/* Adjust width for smaller screens */
+@media (max-width: 1024px) {
+  form {
+    width: 70%;
+  }
+}
+
+@media (max-width: 768px) {
+  form {
+    width: 90%;
+  }
+}
+
+@media (max-width: 480px) {
+  form {
+    width: 100%;
+  }
+}
