--- a/homestyle.css
+++ b/homestyle.css
@@ -13,12 +13,12 @@
 
 /* Header Styles */
 .header {
-  background-color: rgb(225, 224, 237);
+  background-color: rgb(255, 255, 255);
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid #ccc;
   /* Corrected border-bottom to include color */
-  box-shadow: 0 7px 3px -1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 3px -2px rgb(0, 0, 0);
 }
 
 .header h1 {
@@ -47,8 +47,9 @@ a.button {
 .title {
   margin-top: 10px;
   font-size: 60px;
-  color: #000000;
+  color: #ffffff;
   font-family: sans-serif;
+  text-align:right;
 }
 
 /* Body Styles */
