--- a/style-dashboard.css
+++ b/style-dashboard.css
@@ -82,7 +82,7 @@ body {
  /* z-index: 1; /* Stay on top */
  /* top: 0; /* Stay at the top */
  /* left: 0;  */
-   background-color: #b3b3b3;
+ /*background: linear-gradient(to bottom, #006699 0%, #009933 100%); *//*#b3b3b3*/;
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
 }
