--- a/style-jobapplication.css
+++ b/style-jobapplication.css
@@ -60,3 +60,13 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background-color: #202020;
 }
+h4{
+  text-align: center;
+  text-decoration: underline;
+}
+h2{
+  margin-left: 30px;
+}
+p{
+  margin-left: 30px;
+}
