--- a/style-dashboard.css
+++ b/style-dashboard.css
@@ -82,8 +82,8 @@ body {
  /* z-index: 1; /* Stay on top */
  /* top: 0; /* Stay at the top */
  /* left: 0;  */
-/*background-color: #b3b3b3;*/
- background: linear-gradient(to bottom,  #ccffcc 0%,#ccffcc 100%); /*#b3b3b3*/;
+background-color: black;
+/* background: linear-gradient(to bottom,  #ccffcc 0%,#ccffcc 100%);*/ /*#b3b3b3*/;
 
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
@@ -94,11 +94,11 @@ body {
   text-decoration: none;
   font-size: 25px;
   font-weight: bolder;
-  color: #000000;
+  color: #ffffff;
   display: block;
 }
 .sidebar a:hover {
-  color: #ffffff;
+  color: #7f1e1e;
 }
 input[type=text] {
   float: right;
