--- a/style.css
+++ b/style.css
@@ -97,9 +97,10 @@ input[type="email"],
 input[type="password"] {
   width: 50%;
   padding: 10px;
-  margin: 10px 20px;
+  margin: 10px 0px;
   border: 1px solid #000000;
   border-radius: 5px;
+  margin-left: 70px;
 }
 
 button[type="submit"] {
