--- a/style-jobposting.css
+++ b/style-jobposting.css
@@ -84,3 +84,17 @@ label{
     width: 100%;
   }
 }
+select {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  width: 60%;
+  padding: 10px;
+  margin: 10px 100px;
+  border: 1px solid #030303;
+  border-radius: 5px;
+}
+ select option {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  color:black;
+}
